# flutter_rust_bridge_demo

./: .gitignore  LICENSE  MyApp.java  README.md  flutter_rust_bridge.yaml  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/deserialize_demo/: MainActivity.kt
android/app/src/main/kotlin/com/example/flutter_rust_bridge_demo/: MainActivity.kt
duplicated-derive/: Cargo.toml
duplicated-derive/src/: lib.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: camera.dart  deserialize.dart
rust/: Cargo.toml
rust/src/api/: bar_decoder.rs  err.rs  init.rs  mod.rs  simple.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/build_tool/lib/src/: build_gradle.dart  build_pod.dart
rust_builder/ios/: rust_lib_deserialize_demo.podspec  rust_lib_flutter_rust_bridge_demo.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_deserialize_demo.podspec  rust_lib_flutter_rust_bridge_demo.podspec
rust_builder/windows/: CMakeLists.txt
