[package]
name = "rust_lib_deserialize_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0-dev.32"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
duplicated-derive = { path = "../duplicated-derive" }