[package]
name = "rust_lib_deserialize_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.0.0"
serde = { version = "1.0.198", features = ["derive"] }
sonic-rs = "0.3"
duplicated-derive = { path = "../duplicated-derive" }
bardecoder = "0.5.0"
image = "0.24"
