[package]
name = "rust_lib_flutter_rust_bridge_demo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
serde = { version = "1.0", features = ["derive"] }
sonic-rs = "0.5"
duplicated-derive = { path = "../duplicated-derive" }
bardecoder = "0.5"
image = "0.24"
